# ts_forecast

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
scripts/: clean_local_file_system.sh  pylint_src.sh  sphinx_build_html.sh
src/: __init__.py  ts_forecast.py
src/plot/: __init__.py  plot_ts.py
src/pre_process/: __init__.py  split_ts_df.py  stationarity.py  transform_ts_df.py
src/utils/: __init__.py  args.py  misc.py  plot_ts.py
