[project]
name = "aemo_windfarms_forecasting"
version = "0.1.0"
description = "Ad Hoc project for time series forecasting of AEMO windfarms energy generation data"
authors = ["David Grethlein <12dgrethlein@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
requires-python = ">=3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
